--- a/assets/css/styleNotHome.css
+++ b/assets/css/styleNotHome.css
@@ -351,12 +351,12 @@ body {
       margin: 0;
       margin-top: 0.5em;
       border: 0;
-      background: #fff;
+      background: rgba(255, 255, 255, 0.1);
       padding: 1em;
       width: 100vh; }
 
   .opened {
-    height: 80vh !important;
+    height: 75vh !important;
     background: #fff !important; }
 
   .fixed {
@@ -461,10 +461,9 @@ body {
     font-size: 32px; }
 
   #navigation {
-    height: 12vh; }
+    height: 8.5vh; }
     #navigation #navbar {
-      padding: 1em 0 0 0;
-      background: rgba(255, 255, 255, 0.1); }
+      padding: 1em 0 0 0; }
 
   #headerRooms .panelHeaderRooms {
     height: 25vh;
@@ -517,6 +516,9 @@ body {
   #navigation {
     height: 12vh; }
 
+  #firstPage .homeLine {
+    margin-top: 30%; }
+
   #footer .leftPanel {
     height: auto; }
 
@@ -541,5 +543,13 @@ body {
   #headerRooms .panelHeaderRooms {
     height: auto;
     padding-top: 2em; } }
+@media screen and (max-width: 320px) {
+  #navigation {
+    height: 14vh; }
+
+  #firstPage .logoName h1 {
+    font-size: 28px; }
+  #firstPage .homeLine {
+    margin-top: 15%; } }
 
 /*# sourceMappingURL=styleNotHome.css.map */
