--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ body {
 
 #navigation {
   position: absolute;
-  bottom: 0;
+  bottom: 20%;
   border: 0;
   background: rgba(255, 255, 255, 0.8);
   box-shadow: none;
@@ -135,7 +135,7 @@ body {
           font-size: 7em;
           font-weight: 400; }
         #pageTwo #booking .bookingPanel .day h5 {
-          font-size: 3em;
+          font-size: 40px;
           font-weight: 300; }
         #pageTwo #booking .bookingPanel .day select {
           margin-top: 1.5em;
@@ -148,7 +148,7 @@ body {
           font-size: 7em;
           font-weight: 400; }
         #pageTwo #booking .bookingPanel .month h5 {
-          font-size: 3em;
+          font-size: 40px;
           font-weight: 300; }
         #pageTwo #booking .bookingPanel .month select {
           margin-top: 1.5em;
@@ -161,7 +161,7 @@ body {
           font-size: 7em;
           font-weight: 400; }
         #pageTwo #booking .bookingPanel .year h5 {
-          font-size: 3em;
+          font-size: 40px;
           font-weight: 300; }
         #pageTwo #booking .bookingPanel .year select {
           margin-top: 1.5em;
@@ -310,12 +310,12 @@ body {
       margin: 0;
       margin-top: 0.5em;
       border: 0;
-      background: #fff;
+      background: rgba(255, 255, 255, 0.1);
       padding: 1em;
       width: 100vh; }
 
   .opened {
-    height: 80vh !important;
+    height: 75vh !important;
     background: #fff !important; }
 
   .fixed {
@@ -420,10 +420,9 @@ body {
     font-size: 32px; }
 
   #navigation {
-    height: 12vh; }
+    height: 8.5vh; }
     #navigation #navbar {
-      padding: 1em 0 0 0;
-      background: rgba(255, 255, 255, 0.1); }
+      padding: 1em 0 0 0; }
 
   #headerRooms .panelHeaderRooms {
     height: 25vh;
@@ -476,6 +475,9 @@ body {
   #navigation {
     height: 12vh; }
 
+  #firstPage .homeLine {
+    margin-top: 30%; }
+
   #footer .leftPanel {
     height: auto; }
 
@@ -500,5 +502,13 @@ body {
   #headerRooms .panelHeaderRooms {
     height: auto;
     padding-top: 2em; } }
+@media screen and (max-width: 320px) {
+  #navigation {
+    height: 14vh; }
+
+  #firstPage .logoName h1 {
+    font-size: 28px; }
+  #firstPage .homeLine {
+    margin-top: 15%; } }
 
 /*# sourceMappingURL=style.css.map */
