--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -47,7 +47,7 @@ body
 #navigation
 {
 	position:absolute;
-	bottom:0;
+	bottom:20%;
 	border:0;
 	background:rgba(255,255,255,0.8);
 	box-shadow: none;
@@ -240,7 +240,7 @@ body
 
 				h5
 				{
-					font-size: 3em;
+					font-size: 40px;
 					font-weight: 300;
 				}
 
@@ -265,7 +265,7 @@ body
 
 				h5
 				{
-					font-size: 3em;
+					font-size: 40px;
 					font-weight: 300;
 				}
 
@@ -290,7 +290,7 @@ body
 
 				h5
 				{
-					font-size: 3em;
+					font-size: 40px;
 					font-weight: 300;
 				}
 
