--- a/assets/scss/location.scss
+++ b/assets/scss/location.scss
@@ -51,11 +51,28 @@
 	}
 }
 
+.popup
+{
+	position: relative;
+	background: #FFF;
+	padding: 20px;
+	padding-top:3em;
+	width: auto;
+	max-width: 500px;
+	margin: 20px auto;
+}
+
 #touristAttraction
 {
 	margin-top:auto;
 	height:auto;
 	padding-bottom:4em;
+
+	.panel
+	{
+		float:left;
+		padding:0 2em 0 2em;
+	}
 
 	.leftSideTourist
 	{
@@ -73,23 +90,30 @@
 
 	.touristLeft
 	{
+		height:30vh;
+		text-overflow:ellipsis;
+
 		h1
 		{
 			font-weight: 400;
 			border-bottom:1px solid #000;
-			width:75%;
+			width:100%;
 			padding-left:0.2em;
+			margin-bottom: 1em;
 		}
 
-		p
+		.wordwrapper
 		{
 			margin-top: 3em;
 			text-align: justify;
 		}
+
+		
 	}
 
 	.imageTourist
 	{
+		margin-top:3em;
 		height:30vh;
 		width:100%;
 		background-size: cover;
