--- a/assets/scss/media.scss
+++ b/assets/scss/media.scss
@@ -1,3 +1,17 @@
+@media screen and (max-width: 1263px)
+{
+	#navigation
+	{
+		#navbar
+		{
+			a
+			{
+				font-size: 22px;
+			}
+		}
+	}
+}
+
 @media screen and (max-width: 1200px) 
 { 
 	//For Home
