--- a/assets/scss/styleNotHome.scss
+++ b/assets/scss/styleNotHome.scss
@@ -13,6 +13,7 @@ $font-secondary: #000;
 @import 'businessandmeetings';
 @import 'location';
 @import 'weddingsandbirthdays';
+@import 'resto';
 
 body
 {
