--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,6 +292,9 @@ body {
       font-size: 14px;
       font-weight: 40; }
 
+@media screen and (max-width: 1263px) {
+  #navigation #navbar a {
+    font-size: 22px; } }
 @media screen and (max-width: 1200px) {
   #pageTwo .bookingPanel {
     height: 1180px !important; }
