--- a/assets/scss/resto.scss
+++ b/assets/scss/resto.scss
@@ -10,6 +10,18 @@
     }
 }
 
+#headCake
+{
+    font-family: 'helvetica';
+    margin-bottom: -1em;
+    
+    h1
+    {
+        text-align: center;
+        padding: 2em;
+    }
+}
+
 #headSlider
 {
     margin-bottom:2em;
