--- a/assets/scss/styleNotHome.scss
+++ b/assets/scss/styleNotHome.scss
@@ -3,8 +3,9 @@
 ------ Grand ABE's Website -------
 -----------------------------*/
 
-$primary-color: #272c2d;
-$secondary-color: #fff;
+$primary-color: #1B2021;
+$secondary-color: #F6F7EB;
+$accent-color : #660000;
 
 $font-primary: #fff;
 $font-secondary: #000;
@@ -20,8 +21,14 @@ body
 	margin:0;
 	padding:0;
 	text-align: justify;
+	background:$secondary-color !important;
 
 	font-family: 'helvetica';
+}
+
+p
+{
+	font-size: 14px;
 }
 
 .darkerFilter
@@ -48,20 +55,21 @@ body
 #navigation
 {
 	border:0;
-	background:rgba(255,255,255,0.8);
+	background:rgba(255,255,255,0.6);
 	box-shadow: none;
 	padding:0 2em 0 2em;
 	margin-bottom:0;
 	top: 0;
 	width:100%;
+	padding-top: 100px;
+	padding-bottom: 20px;
 	border-radius: 0;
-	font-size: 1.5em;
+	font-size: 18px;
 	font-weight: 300;
 	position:absolute;
 	transition:all .2s ease-in-out;
 	z-index:1000;
 	color:$font-secondary;
-	overflow: hidden;
 
 	h1
 	{
@@ -76,16 +84,29 @@ body
 		max-width: 70px;
 	}
 
+	.navbar-brand
+	{
+		margin-top: -150px;
+		margin-left: 0px;
+		font-size: 30pt;
+	}
+
 	#navbar
 	{
 		margin:0;
 		border:0;
-		overflow-y: scroll;
+		margin-left: -360px;
+		float: left;
 
 		.in
 		{
 			background:#fff;
 			border:0;
+		}
+
+		.dropdown-item
+		{
+			color:$font-secondary;
 		}
 
 		a
@@ -121,7 +142,6 @@ body
 {
 	position:relative;
 	width:100%;
-	height:50vh;
 	overflow: hidden;
 	color: $font-primary;
     transition: 0s linear;
@@ -138,14 +158,14 @@ body
 #footer
 {
 	width:100%;
-	height:35vh;
+	height:250px;
 	overflow:hidden;
 
 	.leftPanel
 	{
 		background:$primary-color;
 		color:$font-primary;
-		height:40vh;
+		height:100%;
 		padding:5vh 15vh 1em 3em;
 
 		h4
@@ -165,6 +185,8 @@ body
 	.rightPanel
 	{
 		padding:5vh 2em 1em 1em;
+		background: $accent-color !important;
+		color:$font-primary !important;
 		
 		h4
 		{
@@ -177,6 +199,18 @@ body
 		{
 			font-size:14px;
 			font-weight: 40;
+		}
+
+		a
+		{
+			text-decoration: none;
+			color:$font-primary !important;
+			transition:all .2s ease-in-out;
+		}
+
+		a:hover
+		{
+			color:#ccc !important;
 		}
 	}
 }
