--- a/assets/css/styleNotHome.css
+++ b/assets/css/styleNotHome.css
@@ -276,10 +276,6 @@
     background-size: cover !important;
     height: 80vh;
     width: 100%; }
-  #headSlider .imageSliderResto {
-    background: url("../images/resto/4.jpg"); }
-  #headSlider .imageSliderCake {
-    background: url("../images/cake/10.jpg"); }
 
 #headingResto {
   margin-bottom: -5em; }
@@ -307,12 +303,6 @@
     background-size: 100% 100% !important;
     height: 30vh;
     padding: 1em; }
-  #freatured .col-lg-4:nth-child(2) .imageFreatured {
-    background: url("../images/resto/1.jpg"); }
-  #freatured .col-lg-4:nth-child(3) .imageFreatured {
-    background: url("../images/resto/2.jpg"); }
-  #freatured .col-lg-4:nth-child(4) .imageFreatured {
-    background: url("../images/resto/3.jpg"); }
   #freatured .textFreatured {
     margin-top: 2em;
     padding-bottom: 2em; }
@@ -348,18 +338,6 @@
     background-size: 100% 100% !important;
     height: 30vh;
     padding: 1em; }
-  #freaturedCake .col-lg-4:nth-child(3) .imageFreatured {
-    background: url("../images/cake/1.jpg"); }
-  #freaturedCake .col-lg-4:nth-child(4) .imageFreatured {
-    background: url("../images/cake/2.jpg"); }
-  #freaturedCake .col-lg-4:nth-child(5) .imageFreatured {
-    background: url("../images/cake/3.jpg"); }
-  #freaturedCake .col-lg-4:nth-child(6) .imageFreatured {
-    background: url("../images/cake/4.jpg"); }
-  #freaturedCake .col-lg-4:nth-child(7) .imageFreatured {
-    background: url("../images/cake/5.jpg"); }
-  #freaturedCake .col-lg-4:nth-child(8) .imageFreatured {
-    background: url("../images/cake/6.jpg"); }
   #freaturedCake .textFreatured {
     margin-top: 2em;
     padding-bottom: 2em; }
@@ -381,14 +359,6 @@
     background-size: cover !important;
     height: 30vh;
     padding: 1em; }
-  #freaturedSliced .col-lg-3:nth-child(2) .imageFreatured {
-    background: url("../images/cake/12.jpg"); }
-  #freaturedSliced .col-lg-3:nth-child(3) .imageFreatured {
-    background: url("../images/cake/13.jpg"); }
-  #freaturedSliced .col-lg-3:nth-child(4) .imageFreatured {
-    background: url("../images/cake/14.jpg"); }
-  #freaturedSliced .col-lg-3:nth-child(5) .imageFreatured {
-    background: url("../images/cake/15.jpg"); }
   #freaturedSliced .textFreatured {
     margin-top: 2em; }
     #freaturedSliced .textFreatured h5 {
@@ -481,7 +451,7 @@ p {
 
 #footer {
   width: 100%;
-  height: 250px;
+  height: auto;
   overflow: hidden; }
   #footer .leftPanel {
     background: #1B2021;
